--- a/index.less
+++ b/index.less
@@ -6,6 +6,16 @@
   overflow: hidden;
 }
 
+.rt-loading-wrap {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1000;
+  background-color: rgba(255, 255, 255, 0.65);
+  align-items: center;
+  justify-content: center;
+}
+
 .rt-header {
   width: 100%;
   height: 30px;
