--- a/index.less
+++ b/index.less
@@ -73,11 +73,26 @@
   margin-left: 1px;
 }
 
+.rt-tr-m .rt-tr-wrap {
+  opacity: 0.3;
+}
+
+.rt-tr-s {
+  background-color: #e6f4ff;
+}
+.rt-tr-s:hover {
+  background-color: #bae0ff !important;
+}
 .rt-tr {
   height: 30px;
+  border-bottom: solid 1px rgba(198,212,224,0.7);
+}
+.rt-tr-wrap {
   display: flex;
   align-items: center;
-  border-bottom: solid 1px rgba(198,212,224,0.7);
+}
+.rt-tr:hover {
+  background-color: #eaeaea;
 }
 
 .rt-td-wrap {
